fixed Simplify added Path2D_Basic example added Path3DTween_Basic example

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -29,7 +29,7 @@ sketchbook.location=${user.home}/Documents/Processing
 # For Windows the default path would be ${user.home}/workspace/libs (make 
 # adjustments below).
 
-classpath.local.location=${user.home}/Documents/workspace/libs
+#classpath.local.location=${user.home}/Documents/workspace/libs
 
 
 # For OSX users. 
