Update version in build

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -146,7 +146,7 @@ source.repository=https://github.com/ekeneijeoma/ijeomamotion
 # This is used to compare different versions of the same library, and check if 
 # an update is available.
 
-library.version=26
+library.version=40
 
 
 # The version as the user will see it. 
@@ -160,7 +160,7 @@ library.dependencies=?
 library.keywords=?
 
 tested.platform=osx,windows
-tested.processingVersion=2.0a8
+tested.processingVersion=2.0
 
 
 # Include javadoc references into your project's javadocs.
