--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/JVM 1.6.0"/>
-	<classpathentry kind="lib" path="/Users/eijeoma/Documents/workspace/libs/core.jar"/>
-	<classpathentry kind="lib" path="/Users/eijeoma/Documents/workspace/libs/gluegen-rt-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="/Users/eijeoma/Documents/workspace/libs/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="/Users/eijeoma/Documents/workspace/libs/jogl-all-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="/Users/eijeoma/Documents/workspace/libs/jogl-all.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/core.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-armv6hf.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
