--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="data"/>
 	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/core.jar"/>
 	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-amd64.jar"/>
 	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-armv6hf.jar"/>
