--- a/resources/build.properties
+++ b/resources/build.properties
@@ -72,7 +72,7 @@ ant.description=ProcessingLibs Ant build file.
 # Project details.
 # Give your library a name.
 
-project.name=ijeomamotion
+project.name=ijeomamotion	
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -101,7 +101,7 @@ author.url=http://ekeneijeoma.com
 # Set the web page for your library.
 # This is NOT a direct link to where to download it.
 
-library.url=https://github.com/ekeneijeoma/ijeomamotion
+library.url=http://ekeneijeoma.com/processing/ijeomamotion
 
 
 # Set the category of your library. This must be one (or many) of the following:
@@ -129,7 +129,7 @@ library.sentence=A cross-mode Processing library for sketching animations with n
 # second sentence here. If your library only works on certain operating systems,
 # mention it here.
 
-library.paragraph=Cross-mode means that it will run and export in both Processing IDE's Java and Javascript modes. It can play tweens in parallel, in a sequence or in a timeline/keyframes. Parallels can playback Sequences and vice versa. Timelines can also playback Parallels and Sequences too. You can also use all of aforementioed to call functions! You can also use it in Javascript with or without Processing. However as of now the javascript port ijeomamotion.js doesnt include the ijeomamotion.tween.Callback class or ijeomamotion.geom and ijeomamotion.math packages but it will soon! Please post issues on Github or Processing's forums under "Contributed Libraries". 
+library.paragraph=Cross-mode means that it will run and export in both Processing IDE's Java and Javascript modes. It can play tweens in parallel, in a sequence or in a timeline/keyframes. Parallels can playback Sequences and vice versa. Timelines can also playback Parallels and Sequences too. You can also use all of aforementioed to call functions! You can also use it in Javascript with or without Processing. However as of now the javascript port ijeomamotion.js doesnt include the ijeomamotion.tween.Callback class or ijeomamotion.geom and ijeomamotion.math packages but it will soon! Please post issues on Github or Processing's forums under "Contributed Libraries".  
 
 
 # Set the source code repository for your project.
@@ -145,21 +145,21 @@ source.repository=https://github.com/ekeneijeoma/ijeomamotion
 # This is used to compare different versions of the same library, and check if 
 # an update is available.
 
-library.version=47
+library.version=48
 
 
 # The version as the user will see it. 
 # If blank, the library.version attribute will be used here.
 
-library.prettyVersion=4.7
+library.prettyVersion=4.8
 
 
 library.copyright=(C) 2012
 library.dependencies=?
-library.keywords=animation, timeline, sequence, tweens, easing, path, bezier, curve  
+library.keywords=?
 
 tested.platform=osx,windows
-tested.processingVersion=2.0b5
+tested.processingVersion=2.0b8
 
 
 # Include javadoc references into your project's javadocs.
