--- a/resources/library.properties
+++ b/resources/library.properties
@@ -1,4 +1,4 @@
-# More on this file here: http://code.google.com/p/processing/wiki/LibraryBasics
+# More on this file here: https://github.com/processing/processing/wiki/Library-Basics
 # UTF-8 supported.
 
 # The name of your library as you want it formatted.
