--- a/.classpath
+++ b/.classpath
@@ -2,21 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="data"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/core.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-amd64.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-armv6hf.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-linux-i586.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt-natives-windows-i586.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/gluegen-rt.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-amd64.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-armv6hf.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-linux-i586.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-macosx-universal.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-windows-amd64.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all-natives-windows-i586.jar"/>
-	<classpathentry kind="lib" path="/Users/ekeneijeoma/Documents/workspace/libs/jogl-all.jar"/>
+	<classpathentry kind="lib" path="lib/core.jar"/>
+	<classpathentry kind="lib" path="lib/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="lib/jogl-all-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="lib/jogl-all.jar"/>
+	<classpathentry kind="lib" path="lib/gluegen-rt-natives-macosx-universal.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
