Removed Processing libs

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -79,7 +79,7 @@ project.name=ijeomamotion
 # 'normal' will compile the distribution including the javadoc-reference and all
 # web-files (the compile process here takes longer).
 
-project.compile=normal
+project.compile=fast
 
 # All files compiled with project.compile=normal are stored 
 # in the distribution folder.
@@ -144,13 +144,13 @@ source.repository=https://github.com/ekeneijeoma/ijeomamotion
 # This is used to compare different versions of the same library, and check if 
 # an update is available.
 
-library.version=56
+library.version=57
 
 
 # The version as the user will see it. 
 # If blank, the library.version attribute will be used here.
 
-library.prettyVersion=5.6
+library.prettyVersion=5.7
 
 
 library.copyright=(C) 2012
